@@ -74,6 +74,12 @@
                 </pluginRepository>
             </pluginRepositories>
         </profile>
+        <profile>
+            <id>user-profile</id>
+            <properties>
+                <jqassistant.skip>true</jqassistant.skip>
+            </properties>
+        </profile>
     </profiles>
 
 </settings>
